# synabit

./: .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  RELEASE_NOTES.md  THIRD_PARTY_LICENSES.md  add_hello.py  add_notify.py  add_registry.py  broadcast_notify.py  build_log.txt  check_compose.exp  check_compose_deploy.exp  check_docker.exp  check_ports.exp  check_ports2.exp  check_server.exp  debug_check  debug_check2  debug_check2.long-type-342017247557489353.txt  debug_check_json.long-type-11565865453862022765.txt  debug_check_real  debug_script.js  decode.js  deploy.exp  deploy_docker.exp  deploy_docker_2.exp  deploy_docker_cp.exp  docker-compose.yml  eslint.config.js  fix_args.py  fix_call_sites.py  fix_commands.py  index.html  install_and_build.exp  map_builder.py  package-lock.json  (+27 more)
.github/workflows/: build-windows.yml  release.yml
coordinator-server/: Cargo.toml  Dockerfile
coordinator-server/src/: main.rs
deploy/: docker-compose.yml
docs/: android-google-play-readiness-audit-2026-07-22.md  android-google-play-readiness-reaudit-2026-07-23.md  p2p-sync-phase0.md
e2e/: note-flow.spec.ts
legal/: EULA.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
license-server/: Cargo.toml  Dockerfile  docker-compose.yml
license-server/migrations/: 20260703000000_init.sql  20260705000000_add_provider_and_customer_id.sql
license-server/src/: api.rs  crypto.rs  db.rs  email.rs  main.rs  payment.rs
playwright-report/: index.html
src/: App.vue  main.ts  style.css  test-pdf.ts  testConvert.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_debouncer.rs  test_diff  test_notify  test_serde  test_similar  test_yaml  update_crypto.py  update_tauri_hello.py  vault_cache.db
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat_engine.rs  crdt_bridge.rs  db.rs  error.rs  gdrive.rs  hwid.rs  jni.rs  lib.rs  license.rs  main.rs  path_utils.rs  search.rs  secrets.rs  signing.rs  watcher.rs
src-tauri/src/commands/: app_lock.rs  chat.rs  e2ee.rs  events.rs  feeds.rs  files.rs  license_cmds.rs  migration.rs  mod.rs  nexus.rs  nodes.rs  notes.rs  p2p_sync.rs  quickcaps.rs  syn.rs  sync.rs  tags.rs  tasks.rs  whiteboards.rs
src-tauri/src/db/: blocks.rs  crdt.rs  edges.rs  files.rs  kv.rs  metrics.rs  mod.rs  nexus.rs  nodes.rs  rag.rs  schema.rs  search.rs  whiteboards.rs
src-tauri/src/feed_engine/: cleanup.rs  discovery.rs  fetcher.rs  mod.rs  opml.rs  parser.rs  readability.rs  sanitizer.rs  scrape.rs
src-tauri/src/gdrive/: api.rs  auth.rs  browse.rs  mod.rs  sync.rs  transport.rs
src-tauri/src/models/: chat.rs  event.rs  file.rs  mod.rs  nexus.rs  node.rs  note.rs  project.rs  quickcap.rs  syn.rs  task.rs  whiteboard.rs
src-tauri/src/p2p/: devices.rs  direct.rs  discovery.rs  endpoint.rs  handler.rs  hybrid.rs  mdns.rs  mod.rs  pairing.rs  transport.rs
src-tauri/src/syn/: conversation.rs  engine.rs  mod.rs  rag.rs  settings.rs  tools.rs
src-tauri/src/sync/: coordinator.rs  crypto.rs  engine.rs  hlc.rs  identity.rs  key_rotation.rs  migration.rs  mod.rs  progress.rs  protocol.rs  utils.rs
src-tauri/src/sync/adapter/: gdrive.rs  mod.rs  server.rs
src-tauri/src/sync/core/: apply.rs  change.rs  crdt.rs  crypto.rs  identity.rs  mod.rs  types.rs
src-tauri/src/utils/: graph_parser.rs  mod.rs  node_parser.rs
src/components/: CalendarApp.vue  EquationExtension.ts  FileManager.vue  Nexus.vue  NoteGraph.vue  QuickCap.vue  SettingsModal.vue  SlashCommandMenu.vue  TaskEditModal.vue  Tasks.vue  TiptapEditor.vue
src/composables/: useAppLock.ts  useAppUpdate.ts  useDevicePairing.ts  useEventBus.ts  useGDrive.ts  useNodeService.ts  useP2PSync.ts  usePlatform.ts  useSettings.ts  useSync.ts
src/composables/__tests__/: usePlatform.spec.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  vi.json
src/layouts/: DesktopLayout.vue  MobileLayout.vue
src/mini-apps/calendar/: CalendarApp.vue  helpers.ts  types.ts
src/mini-apps/chat/: ChatApp.vue
src/mini-apps/feeds/: FeedsApp.vue
src/mini-apps/file/: FileApp.vue
src/mini-apps/files/: FilesApp.vue
src/mini-apps/finance/: AdjustBalanceModal.vue  DebtModal.vue  DebtRepaymentModal.vue  FinanceApp.vue  FinanceOnboarding.vue  FinanceSettingsModal.vue  TransactionModal.vue  currency.ts  types.ts
src/mini-apps/messages/: MessagesApp.vue  types.ts
src/mini-apps/nexus/: NexusApp.vue
src/mini-apps/note/: AudioExtension.ts  CodeBlockComponent.vue  EmbedPickerModal.vue  EmojiSuggestionMenu.vue  EquationExtension.ts  EquationNodeView.vue  LocationExtension.ts  NoteApp.vue  NoteEditModal.vue  NoteExportModal.vue  NoteGraph.vue  NoteMentionMenu.vue  PdfExtension.ts  TiptapEditor.vue  VideoExtension.ts  WhiteboardExtension.ts  emojiData.ts  helpers.ts
src/mini-apps/people/: GiftModal.vue  GraphTab.vue  LinkPersonModal.vue  NotesTab.vue  OverviewTab.vue  PeopleApp.vue  (+4 more)
src/router/: index.ts
src/stores/: useAppLockStore.ts  useAppStore.ts  useLicenseStore.ts  useNavigationStore.ts  useNoteStore.ts
src/types/: ipc.ts
src/utils/: logger.ts
sync-server/: Cargo.toml  Dockerfile  config.example.toml  docker-compose.yml  rewrite_db.py  rewrite_r2d2.py  test_r2d2.sh  wrap_db.py
sync-server/src/: auth.rs  cleanup.rs  config.rs  db.rs  health.rs  mailbox.rs  main.rs  protocol.rs
website/: .dockerignore  Dockerfile  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json
website/app/: app.config.ts  app.vue
(+190 files in other folders)
