[package]
name = "license-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
blake3 = "1.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
hmac = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
