[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
gray_matter = "0.3.2"
walkdir = "2.5.0"
chrono = "0.4.44"
serde_yaml = "0.9.34"
opener = "0.8.4"
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"] }
oauth2 = "5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
sha2 = "0.10"
notify = "6.1.1"

