[package]
name = "synabit"
version = "0.6.6"
description = "A unified, local-first productivity workspace"
authors = ["Synabit"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synabit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
gray_matter = "0.3.2"
walkdir = "2.5.0"
chrono = "0.4.44"
serde_yaml = "0.9.34"
opener = "0.8.4"
urlencoding = "2.1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
sha2 = "0.10"
blake3 = "1"
notify = "6.1.1"
tauri-plugin-store = "2"
thiserror = "2.0.18"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tauri-plugin-deep-link = "2.4.7"
uuid = { version = "1.23.1", features = ["v4"] }
infer = "0.19.0"
keyring = { version = "3.6.3", features = ["apple-native"] }
regex = "1.12.3"
tauri-plugin-os = "2"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
base64 = "0.22"
rand = "0.9"
pulldown-cmark = "0.13.3"
lopdf = "0.34"
tauri-plugin-notification = "2"
md-5 = "0.11.0"
loro = "0.16.9"
similar = "2.6.0"
async-trait = "0.1.89"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
zeroize = "1.8.2"
bip39 = "2"
futures = "0.3"
zip = "8.6.0"

[dev-dependencies]
text-diff = "0.4.0"

